<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/cinza_claro"
    tools:context=".view.TelaPrincipal.TelaPrincipal">

    <TextView
        android:id="@+id/tvStepCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_Atividade_passos"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="40dp"/>


    <Button
        android:id="@+id/btnStartActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_Atividade_iniciar"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:visibility="visible"/>


    <Button
        android:id="@+id/btnStopActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_Atividade_finalizar"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="15dp"
        android:backgroundTint="@color/red"
        android:visibility="gone"/>


</LinearLayout>
